# rss-expand-url-contents

./: expand.py  pyproject.toml  requirements.txt  rss.xml  rss2.xml
.github/workflows/: python-app.yml
