[tool.poetry]
name = "rss-expand-url-contents"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "rss_expand_url_contents"}]

[tool.poetry.dependencies]
python = "^3.10"
feedparser = "^6.0.10"
bs4 = "^0.0.1"
lxml = "^4.9.2"
requests = "^2.31.0"
asyncio = "^3.4.3"
aiohttp = "^3.8.4"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
